Made slider image responsive , fixed many minor alignment and style issues throughout

--- a/templates/it_oxygen/custom/scss/components/_breadcrumb.scss
+++ b/templates/it_oxygen/custom/scss/components/_breadcrumb.scss
@@ -85,6 +85,7 @@
 .contacus-page {
   #g-breadcrumb {
     background-image: none;
+    margin-left: 5px;
     padding: 20px 0 30px;
 
     .g-content {
