--- a/templates/it_oxygen/custom/scss/components/_menu.scss
+++ b/templates/it_oxygen/custom/scss/components/_menu.scss
@@ -35,7 +35,7 @@
 
       .g-menu-item {
         border-left: $border;
-        margin: 0 -5px 0 0 !important;
+        margin: 0 -2px 0 0 !important;
 
         .g-menu-item-container {
           height: $header-height;
