--- a/templates/it_oxygen/custom/scss/extra/_extra.scss
+++ b/templates/it_oxygen/custom/scss/extra/_extra.scss
@@ -117,7 +117,9 @@
 
 
 
-.page-bike {
+.page-bike,
+.page-urban,
+.page-play {
 
   #g-subfeature {
     background-color: $color_mine_shaft_approx;
@@ -136,11 +138,6 @@
       line-height: 32px;
     }
   }
-
-  //.breadcrumb li:before {
-  //  margin: -7px 0 0 -10px !important;
-  //  width: auto;
-  //}
 
   .g-content > .standardbollards {
 
@@ -182,16 +179,6 @@
 
 .page-urban {
 
-  //#g-breadcrumb {
-  //  background-image: url('../../images/urban/urbanbedcrum.jpg');
-  //  background-position: 50% 0;
-  //  background-repeat: repeat-x;
-  //  background-size: cover;
-  //  height: 110px;
-  //  max-height: 110px;
-  //  padding: 0;
-  //}
-
   #colorbox {
     border-radius: 0;
   }
@@ -199,13 +186,6 @@
   #cboxLoadedContent {
     padding: 30px;
   }
-
-  //.breadcrumb li:before {
-  //  background: url('../../../../images/web/main/bike/urbanbreadcrumbicon.png') 0 0 no-repeat transparent;
-  //  content: 'Urban';
-  //  margin: -7px 0 0 -10px !important;
-  //  width: auto;
-  //}
 
   .modelpopup .bfPageIntro p {
     border-bottom: none;
@@ -218,42 +198,6 @@
     margin-bottom: 30px;
     padding: 5px 10px;
   }
-}
-
-.page-rockclimbing {
-  //#g-breadcrumb {
-  //  background-image: url('../../images/urban/urbanbedcrum.jpg');
-  //  background-size: 100% 100%;
-  //}
-  //
-  //.breadcrumb li:before {
-  //  margin: -7px 0 0 -10px !important;
-  //  width: auto;
-  //}
-}
-
-.page-climbingkit {
-  //#g-breadcrumb {
-  //  background-image: url('../../images/urban/urbanbedcrum.jpg');
-  //  background-size: 100% 100%;
-  //}
-  //
-  //.breadcrumb li:before {
-  //  margin: -7px 0 0 -10px !important;
-  //  width: auto;
-  //}
-}
-
-.page-play {
-  //#g-breadcrumb {
-  //  background-image: url('../../images/urban/urbanbedcrum.jpg');
-  //  background-size: 100% 100%;
-  //}
-  //
-  //.breadcrumb li:before {
-  //  margin: -7px 0 0 -10px !important;
-  //  width: auto;
-  //}
 }
 
 .moduletable {
@@ -676,16 +620,12 @@
 
 .contacus-page {
 
-  .g-particle {
-    color: $color_mine_shaft_approx;
-  }
-
+  .g-particle,
   #g-mainbody {
     color: $color_mine_shaft_approx;
   }
+
 }
-
-
 
 body.itemid-101 #g-fullwidth {
   padding-top: 87px;
@@ -722,10 +662,6 @@ p.blank {
 .bike__moredetails .g-content-pro-title {
   font-family: 'roboto';
 }
-
-//.breadcrumb > li + li:before {
-//  display: none;
-//}
 
 .platform-content .custom {
   p.order_btn {
