--- a/templates/it_oxygen/custom/scss/layout/_fullwidth.scss
+++ b/templates/it_oxygen/custom/scss/layout/_fullwidth.scss
@@ -15,14 +15,14 @@
     padding-right: 25px;
 
     .g-content {
-      width: 100%;
       float: right;
+      width: 100%;
 
       @media only screen and (min-width: 320px) and (max-width: 767px) {
         width: 95%;
         margin: 0 auto;
       }
-      
+
       @media only screen and (min-width: 768px) and (max-width: 960px) {
         width: 768px;
         margin: 0 auto;
@@ -39,7 +39,7 @@
         width: 555px;
       }
     }
-    
+
     .platform-content {
       padding: 40px 0 15px;
     }
@@ -51,31 +51,6 @@
       padding: 0;
     }
 
-    @at-root
-    .slide {
-      width: 100% !important;
-
-      .bt {
-        &-row,
-        &-image-link,
-        &-cs .bt-row
-        &_img{
-          height: 100%;
-        }
-      }
-    }
-
-    .slide .bt_img img {
-      height: 600px;
-      margin: 0!important;
-      object-fit: cover;
-      object-position: 0 0;
-    }
-
-    .slides_control,
-    .slide {
-      height: 100%;
-    }
   }
 
   .g-title {
@@ -84,8 +59,9 @@
     font-size: 56px;
     font-weight: 400;
     line-height: 60px;
+    margin-left: -7px;
 
-    span:after{
+    span:after {
       content: '';
       display: none;
       height: 0;
